Test/Files/Parser/FullParserTestCases/Bad/FullTests/Out/testcase01_02.out
<Expr> ::= new ID ( )
<Expr> ::= ID
<Expr> ::= ( <Expr> )
<Expr> ::= <Expr> == <Expr>
<Expr> ::= Integer
<Stmt> ::= System.out.println ( <Expr> )
Parse error on line 6:
...lse			b3 = ! null	}}
---------------------^
Expecting ';', '+', '-', '*', '/', '<', '<=', '>=', '>', '==', '!=', '&&', '||', '.', ')', ','